[gd_scene load_steps=13 format=4 uid="uid://brd6gh1y61osw"]

[ext_resource type="Texture2D" uid="uid://c0icucgejvogm" path="res://Assets/golfballtemp.png" id="1_4quuv"]
[ext_resource type="Script" uid="uid://d4na4m7sjaxg3" path="res://Systems/pause_menu.gd" id="1_lymix"]
[ext_resource type="PhysicsMaterial" uid="uid://bo1ubqo5cuk7a" path="res://Scenes/ball.tres" id="2_3mivm"]
[ext_resource type="Theme" uid="uid://m68oylcsqvn" path="res://UI/main_panel_buttons.tres" id="2_b7jio"]
[ext_resource type="PackedScene" uid="uid://cg4gnar65v0u6" path="res://Scenes/settings_panel.tscn" id="3_c8y3w"]
[ext_resource type="Script" uid="uid://byd3yobpdyute" path="res://Scenes/hole_info.gd" id="4_c8y3w"]
[ext_resource type="Script" uid="uid://dhfnk5ysjd6lj" path="res://Scenes/ball.gd" id="6_b7jio"]
[ext_resource type="TileSet" uid="uid://befm60u0hg213" path="res://Scenes/TileSetBase.tres" id="6_lymix"]
[ext_resource type="Script" uid="uid://ckd3uf13tverm" path="res://Scenes/timer.gd" id="9_66tft"]

[sub_resource type="Theme" id="Theme_66tft"]
Label/font_sizes/font_size = 60

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8y3w"]
size = Vector2(2475, 1328)

[sub_resource type="CircleShape2D" id="CircleShape2D_187gu"]
radius = 8.0

[node name="Node2D" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseButton" type="Button" parent="UI"]
offset_left = 57.0
offset_top = 36.0
offset_right = 212.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 96
text = "||"
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lymix")

[node name="PausePanel" type="Panel" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="UI/PauseMenu/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Label" type="Label" parent="UI/PauseMenu/PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -105.5
offset_right = 105.5
offset_bottom = 83.0
grow_horizontal = 2
theme = SubResource("Theme_66tft")
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -132.5
offset_right = 159.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="UI/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_b7jio")
text = "Resume"

[node name="Settings" type="Button" parent="UI/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_b7jio")
text = "Settings"

[node name="MainMenu" type="Button" parent="UI/PauseMenu/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_b7jio")
text = "Main Menu"

[node name="SettingsPanel" parent="UI/PauseMenu" instance=ExtResource("3_c8y3w")]
layout_mode = 1

[node name="HoleInfo" type="Label" parent="UI"]
offset_left = 2107.0
offset_top = 879.0
offset_right = 2366.0
offset_bottom = 1051.0
theme_override_font_sizes/font_size = 36
text = "Hole 1
Par - 3
Strokes  - 0"
horizontal_alignment = 1
script = ExtResource("4_c8y3w")
metadata/_edit_use_anchors_ = true

[node name="Bounds" type="Node" parent="."]

[node name="Right" type="Area2D" parent="Bounds"]
position = Vector2(1925, 93)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Right"]
z_index = -1
position = Vector2(-1319.5, 74)
shape = SubResource("RectangleShape2D_c8y3w")

[node name="Tileset" type="Node" parent="."]

[node name="Background" type="TileMapLayer" parent="Tileset"]
z_index = -1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD2/wcAAAAMAAMAAAD2/wgAAAAMAAMAAAD2/wkAAAAMAAMAAAD2/woAAAAMAAMAAAD2/wsAAAAMAAMAAAD2/wwAAAAMAAMAAAD3/wcAAAAAAA8AAAD3/wgAAAAAAA8AAAD3/wkAAAAAAA8AAAD3/woAAAAMAAMAAAD3/wsAAAAMAAMAAAD3/wwAAAAMAAMAAAD4/wcAAAAAAA8AAAD4/wgAAAAAAA8AAAD4/wkAAAAAAA8AAAD4/woAAAAMAAMAAAD4/wsAAAAMAAMAAAD4/wwAAAAMAAMAAAD5/wcAAAAAAA8AAAD5/wgAAAAAAA8AAAD5/wkAAAAAAA8AAAD5/woAAAAMAAMAAAD5/wsAAAAMAAMAAAD5/wwAAAAMAAMAAAD6/wcAAAAAAA8AAAD6/wgAAAAAAA8AAAD6/wkAAAAAAA8AAAD6/woAAAAMAAMAAAD6/wsAAAAMAAMAAAD6/wwAAAAMAAMAAAD7/wcAAAAAAA8AAAD7/wgAAAAAAA8AAAD7/wkAAAAAAA8AAAD7/woAAAAMAAMAAAD7/wsAAAAMAAMAAAD7/wwAAAAMAAMAAAD8/wcAAAAAAA8AAAD8/wgAAAAAAA8AAAD8/wkAAAAAAA8AAAD8/woAAAAMAAMAAAD8/wsAAAAMAAMAAAD8/wwAAAAMAAMAAAD9/wcAAAAAAA8AAAD9/wgAAAAAAA8AAAD9/wkAAAAAAA8AAAD9/woAAAAMAAMAAAD9/wsAAAAMAAMAAAD9/wwAAAAMAAMAAAD+/wcAAAAAAA8AAAD+/wgAAAAAAA8AAAD+/wkAAAAAAA8AAAD+/woAAAAMAAMAAAD+/wsAAAAMAAMAAAD+/wwAAAAMAAMAAAD//wcAAAAAAA8AAAD//wgAAAAAAA8AAAD//wkAAAAAAA8AAAD//woAAAAMAAMAAAD//wsAAAAMAAMAAAD//wwAAAAMAAMAAAAAAAcAAAAAAA8AAAAAAAgAAAAAAA8AAAAAAAkAAAAAAA8AAAAAAAoAAAAMAAMAAAAAAAsAAAAMAAMAAAAAAAwAAAAMAAMAAAABAAcAAAAAAA8AAAABAAgAAAAAAA8AAAABAAkAAAAAAA8AAAABAAoAAAAMAAMAAAABAAsAAAAMAAMAAAABAAwAAAAMAAMAAAACAAcAAAAAAA8AAAACAAgAAAAAAA8AAAACAAkAAAAAAA8AAAACAAoAAAAMAAMAAAACAAsAAAAMAAMAAAACAAwAAAAMAAMAAAADAAcAAAAAAA8AAAADAAgAAAAAAA8AAAADAAkAAAAAAA8AAAADAAoAAAAMAAMAAAADAAsAAAAMAAMAAAADAAwAAAAMAAMAAAAEAAcAAAAAAA8AAAAEAAgAAAAAAA8AAAAEAAkAAAAAAA8AAAAEAAoAAAAMAAMAAAAEAAsAAAAMAAMAAAAEAAwAAAAMAAMAAAAFAAgAAAAMAAMAAAAFAAkAAAAMAAMAAAAFAAoAAAAMAAMAAAAFAAsAAAAMAAMAAAAFAAwAAAAMAAMAAAAGAAgAAAAMAAMAAAAGAAkAAAAMAAMAAAAGAAoAAAAMAAMAAAAGAAsAAAAMAAMAAAAGAAwAAAAMAAMAAAAHAAgAAAAMAAMAAAAHAAkAAAAMAAMAAAAHAAoAAAAMAAMAAAAHAAsAAAAMAAMAAAAHAAwAAAAMAAMAAAAIAAgAAAAMAAMAAAAIAAkAAAAMAAMAAAAIAAoAAAAMAAMAAAAIAAsAAAAMAAMAAAAIAAwAAAAMAAMAAAAJAAgAAAAMAAMAAAAJAAkAAAAMAAMAAAAJAAoAAAAMAAMAAAAJAAsAAAAMAAMAAAAJAAwAAAAMAAMAAAAKAAgAAAAMAAMAAAAKAAkAAAAMAAMAAAAKAAoAAAAMAAMAAAAKAAsAAAAMAAMAAAAKAAwAAAAMAAMAAAALAAgAAAAMAAMAAAALAAkAAAAMAAMAAAALAAoAAAAMAAMAAAALAAsAAAAMAAMAAAALAAwAAAAMAAMAAAAMAAcAAAAAAA8AAAAMAAgAAAAAAA8AAAAMAAkAAAAMAAMAAAAMAAoAAAAMAAMAAAAMAAsAAAAMAAMAAAAMAAwAAAAMAAMAAAANAAcAAAAAAA8AAAANAAgAAAAAAA8AAAANAAkAAAAMAAMAAAANAAoAAAAMAAMAAAANAAsAAAAMAAMAAAANAAwAAAAMAAMAAAAOAAcAAAAAAA8AAAAOAAgAAAAAAA8AAAAOAAkAAAAMAAMAAAAOAAoAAAAMAAMAAAAOAAsAAAAMAAMAAAAOAAwAAAAMAAMAAAAPAAcAAAAAAA8AAAAPAAgAAAAAAA8AAAAPAAkAAAAMAAMAAAAPAAoAAAAMAAMAAAAPAAsAAAAMAAMAAAAPAAwAAAAMAAMAAAAQAAcAAAAAAA8AAAAQAAgAAAAAAA8AAAAQAAkAAAAMAAMAAAAQAAoAAAAMAAMAAAAQAAsAAAAMAAMAAAAQAAwAAAAMAAMAAAARAAcAAAAAAA8AAAARAAgAAAAAAA8AAAARAAkAAAAMAAMAAAARAAoAAAAMAAMAAAARAAsAAAAMAAMAAAARAAwAAAAMAAMAAAASAAcAAAAAAA8AAAASAAgAAAAAAA8AAAASAAkAAAAMAAMAAAASAAoAAAAMAAMAAAASAAsAAAAMAAMAAAASAAwAAAAMAAMAAAATAAcAAAAAAA8AAAATAAgAAAAAAA8AAAATAAkAAAAMAAMAAAATAAoAAAAMAAMAAAATAAsAAAAMAAMAAAATAAwAAAAMAAMAAAAUAAcAAAAAAA8AAAAUAAgAAAAAAA8AAAAUAAkAAAAKAAMAAAAUAAoAAAAMAAMAAAAUAAsAAAAMAAMAAAAUAAwAAAAMAAMAAAAVAAcAAAAAAA8AAAAVAAgAAAAAAA8AAAAVAAkAAAAMAAMAAAAVAAoAAAAMAAMAAAAVAAsAAAAMAAMAAAAVAAwAAAAMAAMAAAAWAAcAAAAAAA8AAAAWAAgAAAAAAA8AAAAWAAkAAAAMAAMAAAAWAAoAAAAMAAMAAAAWAAsAAAAMAAMAAAAWAAwAAAAMAAMAAAAXAAcAAAAAAA8AAAAXAAgAAAAAAA8AAAAXAAkAAAAMAAMAAAAXAAoAAAAMAAMAAAAXAAsAAAAMAAMAAAAXAAwAAAAMAAMAAAAYAAcAAAAAAA8AAAAYAAgAAAAAAA8AAAAYAAkAAAAMAAMAAAAYAAoAAAAMAAMAAAAYAAsAAAAMAAMAAAAYAAwAAAAMAAMAAAAZAAcAAAAAAA8AAAAZAAgAAAAAAA8AAAAZAAkAAAAMAAMAAAAZAAoAAAAMAAMAAAAZAAsAAAAMAAMAAAAZAAwAAAAMAAMAAAAaAAcAAAAAAA8AAAAaAAgAAAAAAA8AAAAaAAkAAAAMAAMAAAAaAAoAAAAMAAMAAAAaAAsAAAAMAAMAAAAaAAwAAAAMAAMAAAAbAAcAAAAAAA8AAAAbAAgAAAAAAA8AAAAbAAkAAAAMAAMAAAAbAAoAAAAMAAMAAAAbAAsAAAAMAAMAAAAbAAwAAAAMAAMAAAAcAAcAAAAMAAMAAAAcAAgAAAAMAAMAAAAcAAkAAAAMAAMAAAAcAAoAAAAMAAMAAAAcAAsAAAAMAAMAAAAcAAwAAAAMAAMAAAD3/wYAAAAAAA4AAAD4/wYAAAAAAA4AAAD5/wYAAAAAAA4AAAD6/wYAAAAAAA4AAAD7/wYAAAAAAA4AAAD8/wYAAAAAAA4AAAD9/wYAAAAAAA4AAAD+/wYAAAAAAA4AAAD//wYAAAAAAA4AAAAAAAYAAAAAAA4AAAABAAYAAAAAAA4AAAACAAYAAAAAAA4AAAADAAYAAAAAAA4AAAAEAAYAAAAAAA4AAAAFAAYAAAAAAA4AAAAGAAYAAAAAAA4AAAAHAAYAAAAAAA4AAAAIAAYAAAAAAA4AAAAJAAYAAAAAAA4AAAAKAAYAAAAAAA4AAAALAAYAAAAAAA4AAAAMAAYAAAAAAA4AAAANAAYAAAAAAA4AAAAOAAYAAAAAAA4AAAAPAAYAAAAAAA4AAAAQAAYAAAAAAA4AAAARAAYAAAAAAA4AAAASAAYAAAAAAA4AAAATAAYAAAAAAA4AAAAUAAYAAAAAAA4AAAAVAAYAAAAAAA4AAAAWAAYAAAAAAA4AAAAXAAYAAAAAAA4AAAAYAAYAAAAAAA4AAAAZAAYAAAAAAA4AAAAaAAYAAAAAAA4AAAAbAAYAAAAAAA4AAAAcAAYAAAAMAAMAAAD2/wYAAAAMAAMAAAD2/wIAAAAAAA0AAAD2/wMAAAAMAAMAAAD2/wQAAAAMAAMAAAD2/wUAAAAMAAMAAAD3/wIAAAAAAA0AAAD3/wMAAAAAAA0AAAD3/wQAAAAAAA0AAAD3/wUAAAAAAA0AAAD4/wIAAAAAAA0AAAD4/wMAAAAAAA0AAAD4/wQAAAAAAA0AAAD4/wUAAAAAAA0AAAD5/wIAAAAAAA0AAAD5/wMAAAAAAA0AAAD5/wQAAAAAAA0AAAD5/wUAAAAAAA0AAAD6/wIAAAAAAA0AAAD6/wMAAAAAAA0AAAD6/wQAAAAAAA0AAAD6/wUAAAAAAA0AAAD7/wIAAAAAAA0AAAD7/wMAAAAAAA0AAAD7/wQAAAAAAA0AAAD7/wUAAAAAAA0AAAD8/wIAAAAAAA0AAAD8/wMAAAAAAA0AAAD8/wQAAAAAAA0AAAD8/wUAAAAAAA0AAAD9/wIAAAAAAA0AAAD9/wMAAAAAAA0AAAD9/wQAAAAAAA0AAAD9/wUAAAAAAA0AAAD+/wIAAAAAAA0AAAD+/wMAAAAAAA0AAAD+/wUAAAAAAA0AAAD//wIAAAAAAA0AAAD//wMAAAAAAA0AAAD//wQAAAAAAA0AAAD//wUAAAAAAA0AAAAAAAIAAAAAAA0AAAAAAAMAAAAAAA0AAAAAAAQAAAAAAA0AAAAAAAUAAAAAAA0AAAABAAIAAAAAAA0AAAABAAMAAAAAAA0AAAABAAQAAAAAAA0AAAABAAUAAAAAAA0AAAACAAIAAAAAAA0AAAACAAMAAAAAAA0AAAACAAQAAAAAAA0AAAACAAUAAAAAAA0AAAADAAIAAAAAAA0AAAADAAMAAAAAAA0AAAADAAQAAAAAAA0AAAADAAUAAAAAAA0AAAAEAAIAAAAAAA0AAAAEAAMAAAAAAA0AAAAEAAQAAAAAAA0AAAAEAAUAAAAAAA0AAAAFAAIAAAAAAA0AAAAFAAMAAAAAAA0AAAAFAAQAAAAAAA0AAAAFAAUAAAAAAA0AAAAGAAIAAAAAAA0AAAAGAAMAAAAAAA0AAAAGAAQAAAAAAA0AAAAGAAUAAAAAAA0AAAAHAAIAAAAAAA0AAAAHAAMAAAAAAA0AAAAHAAQAAAAAAA0AAAAHAAUAAAAAAA0AAAAIAAIAAAAAAA0AAAAIAAMAAAAAAA0AAAAIAAQAAAAAAA0AAAAIAAUAAAAAAA0AAAAJAAIAAAAAAA0AAAAJAAMAAAAAAA0AAAAJAAQAAAAAAA0AAAAJAAUAAAAAAA0AAAAKAAIAAAAAAA0AAAAKAAMAAAAAAA0AAAAKAAQAAAAAAA0AAAAKAAUAAAAAAA0AAAALAAIAAAAAAA0AAAALAAMAAAAAAA0AAAALAAQAAAAAAA0AAAALAAUAAAAAAA0AAAAMAAIAAAAAAA0AAAAMAAMAAAAAAA0AAAAMAAQAAAAAAA0AAAAMAAUAAAAAAA0AAAANAAIAAAAAAA0AAAANAAMAAAAAAA0AAAANAAQAAAAAAA0AAAANAAUAAAAAAA0AAAAOAAIAAAAAAA0AAAAOAAMAAAAAAA0AAAAOAAQAAAAAAA0AAAAOAAUAAAAAAA0AAAAPAAIAAAAAAA0AAAAPAAMAAAAAAA0AAAAPAAQAAAAAAA0AAAAPAAUAAAAAAA0AAAAQAAIAAAAAAA0AAAAQAAMAAAAAAA0AAAAQAAQAAAAAAA0AAAAQAAUAAAAAAA0AAAARAAIAAAAAAA0AAAARAAMAAAAAAA0AAAARAAQAAAAAAA0AAAARAAUAAAAAAA0AAAASAAIAAAAAAA0AAAASAAMAAAAAAA0AAAASAAQAAAAAAA0AAAASAAUAAAAAAA0AAAATAAIAAAAAAA0AAAATAAMAAAAAAA0AAAATAAQAAAAAAA0AAAATAAUAAAAAAA0AAAAUAAIAAAAAAA0AAAAUAAMAAAAAAA0AAAAUAAQAAAAAAA0AAAAUAAUAAAAAAA0AAAAVAAIAAAAAAA0AAAAVAAMAAAAAAA0AAAAVAAQAAAAAAA0AAAAVAAUAAAAAAA0AAAAWAAIAAAAAAA0AAAAWAAMAAAAAAA0AAAAWAAQAAAAAAA0AAAAWAAUAAAAAAA0AAAAXAAIAAAAAAA0AAAAXAAMAAAAAAA0AAAAXAAQAAAAAAA0AAAAXAAUAAAAAAA0AAAAYAAIAAAAAAA0AAAAYAAMAAAAAAA0AAAAYAAQAAAAAAA0AAAAYAAUAAAAAAA0AAAAZAAIAAAAAAA0AAAAZAAMAAAAAAA0AAAAZAAQAAAAAAA0AAAAZAAUAAAAAAA0AAAAaAAIAAAAAAA0AAAAaAAMAAAAAAA0AAAAaAAQAAAAAAA0AAAAaAAUAAAAAAA0AAAAbAAIAAAAAAA0AAAAbAAMAAAAAAA0AAAAbAAQAAAAAAA0AAAAbAAUAAAAAAA0AAAAcAAIAAAAAAA0AAAAcAAMAAAAAAA0AAAAcAAQAAAAMAAMAAAAcAAUAAAAMAAMAAAD2/wEAAAAAAAwAAAD3/wEAAAAAAAwAAAD4/wEAAAAAAAwAAAD5/wEAAAAAAAwAAAD6/wEAAAAAAAwAAAD7/wEAAAAAAAwAAAD8/wEAAAAAAAwAAAD9/wEAAAAAAAwAAAD+/wEAAAAAAAwAAAD//wEAAAAAAAwAAAAAAAEAAAAAAAwAAAABAAEAAAAAAAwAAAACAAEAAAAAAAwAAAADAAEAAAAAAAwAAAAEAAEAAAAAAAwAAAAFAAEAAAAAAAwAAAAGAAEAAAAAAAwAAAAHAAEAAAAAAAwAAAAIAAEAAAAAAAwAAAAJAAEAAAAAAAwAAAAKAAEAAAAAAAwAAAALAAEAAAAAAAwAAAAMAAEAAAAAAAwAAAANAAEAAAAAAAwAAAAOAAEAAAAAAAwAAAAPAAEAAAAAAAwAAAAQAAEAAAAAAAwAAAARAAEAAAAAAAwAAAASAAEAAAAAAAwAAAATAAEAAAAAAAwAAAAUAAEAAAAAAAwAAAAVAAEAAAAAAAwAAAAWAAEAAAAAAAwAAAAXAAEAAAAAAAwAAAAYAAEAAAAAAAwAAAAZAAEAAAAAAAwAAAAaAAEAAAAAAAwAAAAbAAEAAAAAAAwAAAAcAAEAAAAAAAwAAAD2//7/AAAAAAsAAAD2////AAAAAAsAAAD2/wAAAAAAAAsAAAD3//7/AAAAAAsAAAD3////AAAAAAsAAAD3/wAAAAAAAAsAAAD4//7/AAAAAAsAAAD4////AAAAAAsAAAD4/wAAAAAAAAsAAAD5//7/AAAAAAsAAAD5////AAAAAAsAAAD5/wAAAAAAAAsAAAD6//7/AAAAAAsAAAD6////AAAAAAsAAAD6/wAAAAAAAAsAAAD7//7/AAAAAAsAAAD7////AAAAAAsAAAD7/wAAAAAAAAsAAAD8//7/AAAAAAsAAAD8////AAAAAAsAAAD8/wAAAAAAAAsAAAD9//7/AAAAAAsAAAD9////AAAAAAsAAAD9/wAAAAAAAAsAAAD+//7/AAAAAAsAAAD+////AAAAAAsAAAD+/wAAAAAAAAsAAAD///7/AAAAAAsAAAD/////AAAAAAsAAAD//wAAAAAAAAsAAAAAAP7/AAAAAAsAAAAAAP//AAAAAAsAAAAAAAAAAAAAAAsAAAABAP7/AAAAAAsAAAABAP//AAAAAAsAAAABAAAAAAAAAAsAAAACAP7/AAAAAAsAAAACAP//AAAAAAsAAAACAAAAAAAAAAsAAAADAP7/AAAAAAsAAAADAP//AAAAAAsAAAADAAAAAAAAAAsAAAAEAP7/AAAAAAsAAAAEAP//AAAAAAsAAAAEAAAAAAAAAAsAAAAFAP7/AAAAAAsAAAAFAP//AAAAAAsAAAAFAAAAAAAAAAsAAAAGAP7/AAAAAAsAAAAGAP//AAAAAAsAAAAGAAAAAAAAAAsAAAAHAP7/AAAAAAsAAAAHAP//AAAAAAsAAAAHAAAAAAAAAAsAAAAIAP7/AAAAAAsAAAAIAP//AAAAAAsAAAAIAAAAAAAAAAsAAAAJAP7/AAAAAAsAAAAJAP//AAAAAAsAAAAJAAAAAAAAAAsAAAAKAP7/AAAAAAsAAAAKAP//AAAAAAsAAAAKAAAAAAAAAAsAAAALAP7/AAAAAAsAAAALAP//AAAAAAsAAAALAAAAAAAAAAsAAAAMAP7/AAAAAAsAAAAMAP//AAAAAAsAAAAMAAAAAAAAAAsAAAANAP7/AAAAAAsAAAANAP//AAAAAAsAAAANAAAAAAAAAAsAAAAOAP7/AAAAAAsAAAAOAP//AAAAAAsAAAAOAAAAAAAAAAsAAAAPAP7/AAAAAAsAAAAPAP//AAAAAAsAAAAPAAAAAAAAAAsAAAAQAP7/AAAAAAsAAAAQAP//AAAAAAsAAAAQAAAAAAAAAAsAAAARAP7/AAAAAAsAAAARAP//AAAAAAsAAAARAAAAAAAAAAsAAAASAP7/AAAAAAsAAAASAP//AAAAAAsAAAASAAAAAAAAAAsAAAATAP7/AAAAAAsAAAATAP//AAAAAAsAAAATAAAAAAAAAAsAAAAUAP7/AAAAAAsAAAAUAP//AAAAAAsAAAAUAAAAAAAAAAsAAAAVAP7/AAAAAAsAAAAVAP//AAAAAAsAAAAVAAAAAAAAAAsAAAAWAP7/AAAAAAsAAAAWAP//AAAAAAsAAAAWAAAAAAAAAAsAAAAXAP7/AAAAAAsAAAAXAP//AAAAAAsAAAAXAAAAAAAAAAsAAAAYAP7/AAAAAAsAAAAYAP//AAAAAAsAAAAYAAAAAAAAAAsAAAAZAP7/AAAAAAsAAAAZAP//AAAAAAsAAAAZAAAAAAAAAAsAAAAaAP7/AAAAAAsAAAAaAP//AAAAAAsAAAAaAAAAAAAAAAsAAAAbAP7/AAAAAAsAAAAbAP//AAAAAAsAAAAbAAAAAAAAAAsAAAAcAP7/AAAAAAsAAAAcAP//AAAAAAsAAAAcAAAAAAAAAAsAAAD2//3/AAAAAAoAAAD3//3/AAAAAAoAAAD4//3/AAAAAAoAAAD5//3/AAAAAAoAAAD6//3/AAAAAAoAAAD7//3/AAAAAAoAAAD8//3/AAAAAAoAAAD9//3/AAAAAAoAAAD+//3/AAAAAAoAAAD///3/AAAAAAoAAAAAAP3/AAAAAAoAAAABAP3/AAAAAAoAAAACAP3/AAAAAAoAAAADAP3/AAAAAAoAAAAEAP3/AAAAAAoAAAAFAP3/AAAAAAoAAAAGAP3/AAAAAAoAAAAHAP3/AAAAAAoAAAAIAP3/AAAAAAoAAAAJAP3/AAAAAAoAAAAKAP3/AAAAAAoAAAALAP3/AAAAAAoAAAAMAP3/AAAAAAoAAAANAP3/AAAAAAoAAAAOAP3/AAAAAAoAAAAPAP3/AAAAAAoAAAAQAP3/AAAAAAoAAAARAP3/AAAAAAoAAAASAP3/AAAAAAoAAAATAP3/AAAAAAoAAAAUAP3/AAAAAAoAAAAVAP3/AAAAAAoAAAAWAP3/AAAAAAoAAAAXAP3/AAAAAAoAAAAYAP3/AAAAAAoAAAAZAP3/AAAAAAoAAAAaAP3/AAAAAAoAAAAbAP3/AAAAAAoAAAAcAP3/AAAAAAoAAAD2//z/AAAAAAkAAAD3//z/AAAAAAkAAAD4//z/AAAAAAkAAAD5//z/AAAAAAkAAAD6//z/AAAAAAkAAAD7//z/AAAAAAkAAAD8//z/AAAAAAkAAAD9//z/AAAAAAkAAAD+//z/AAAAAAkAAAD///z/AAAAAAkAAAAAAPz/AAAAAAkAAAABAPz/AAAAAAkAAAACAPz/AAAAAAkAAAADAPz/AAAAAAkAAAAEAPz/AAAAAAkAAAAFAPz/AAAAAAkAAAAGAPz/AAAAAAkAAAAHAPz/AAAAAAkAAAAIAPz/AAAAAAkAAAAJAPz/AAAAAAkAAAAKAPz/AAAAAAkAAAALAPz/AAAAAAkAAAAMAPz/AAAAAAkAAAANAPz/AAAAAAkAAAAOAPz/AAAAAAkAAAAPAPz/AAAAAAkAAAAQAPz/AAAAAAkAAAARAPz/AAAAAAkAAAASAPz/AAAAAAkAAAATAPz/AAAAAAkAAAAUAPz/AAAAAAkAAAAVAPz/AAAAAAkAAAAWAPz/AAAAAAkAAAAXAPz/AAAAAAkAAAAYAPz/AAAAAAkAAAAZAPz/AAAAAAkAAAAaAPz/AAAAAAkAAAAbAPz/AAAAAAkAAAAcAPz/AAAAAAkAAAAGAAcAAAAMAAMAAAAHAAcAAAAMAAMAAAAIAAcAAAAMAAMAAAAJAAcAAAAMAAMAAAAKAAcAAAAMAAMAAAALAAcAAAAMAAMAAAD+/wQAAAAAAA0AAAAFAAcAAAAMAAMAAAA=")
tile_set = ExtResource("6_lymix")
collision_enabled = false

[node name="Tile" type="TileMapLayer" parent="Tileset"]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD2/woAAAAAAAEAAAD2/wsAAAAAAAEAAAD2/wwAAAABAAAAAAD3/woAAAAAAAAAAAD3/wsAAAABAAEAAAD3/wwAAAABAAEAAAD4/woAAAAAAAAAAAD4/wsAAAAAAAEAAAD4/wwAAAABAAEAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAEAAAD5/wwAAAAAAAEAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAEAAAD6/wwAAAABAAEAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAEAAAD7/wwAAAAAAAEAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAEAAAD8/wwAAAAAAAEAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAEAAAD9/wwAAAAAAAEAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAEAAAD+/wwAAAABAAEAAAD//woAAAAAAAAAAAD//wsAAAAAAAEAAAD//wwAAAAAAAEAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAEAAAABAAoAAAAAAAAAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAACAAoAAAAAAAAAAAACAAsAAAAAAAEAAAACAAwAAAAAAAEAAAADAAoAAAAAAAAAAAADAAsAAAABAAAAAAADAAwAAAAAAAEAAAAEAAoAAAAAAAAAAAAEAAsAAAABAAEAAAAEAAwAAAABAAAAAAAFAAoAAAAAAAEAAAAFAAsAAAAAAAEAAAAFAAwAAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAsAAAABAAAAAAAGAAwAAAAAAAEAAAAHAAoAAAABAAAAAAAHAAsAAAAAAAEAAAAHAAwAAAAAAAEAAAAIAAoAAAAAAAEAAAAIAAsAAAAAAAEAAAAIAAwAAAAAAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAAAAAAJAAwAAAAAAAEAAAAKAAoAAAABAAAAAAAKAAsAAAAAAAEAAAAKAAwAAAABAAEAAAALAAoAAAABAAAAAAALAAsAAAAAAAEAAAALAAwAAAAAAAEAAAAMAAoAAAAAAAEAAAAMAAsAAAABAAEAAAAMAAwAAAAAAAEAAAANAAoAAAAAAAEAAAANAAsAAAAAAAEAAAANAAwAAAAAAAEAAAAOAAoAAAAAAAEAAAAOAAsAAAAAAAEAAAAOAAwAAAAAAAEAAAAPAAoAAAAAAAEAAAAPAAsAAAABAAEAAAAPAAwAAAABAAEAAAAQAAoAAAABAAAAAAAQAAsAAAAAAAEAAAAQAAwAAAABAAAAAAARAAoAAAAAAAEAAAARAAsAAAAAAAEAAAARAAwAAAAAAAEAAAASAAoAAAABAAAAAAASAAsAAAAAAAEAAAASAAwAAAAAAAEAAAATAAoAAAABAAAAAAATAAsAAAAAAAEAAAATAAwAAAAAAAEAAAAUAAoAAAAAAAEAAAAUAAsAAAAAAAEAAAAUAAwAAAABAAAAAAAVAAoAAAAAAAEAAAAVAAsAAAAAAAEAAAAVAAwAAAAAAAEAAAAWAAoAAAAAAAEAAAAWAAsAAAAAAAEAAAAWAAwAAAAAAAEAAAAXAAoAAAAAAAEAAAAXAAsAAAAAAAEAAAAXAAwAAAAAAAEAAAAYAAoAAAABAAEAAAAYAAsAAAABAAAAAAAYAAwAAAAAAAEAAAAZAAoAAAAAAAEAAAAZAAsAAAAAAAEAAAAZAAwAAAAAAAEAAAAaAAoAAAAAAAEAAAAaAAsAAAAAAAEAAAAaAAwAAAAAAAEAAAAbAAoAAAAAAAEAAAAbAAsAAAAAAAEAAAAbAAwAAAAAAAEAAAAcAAoAAAAAAAEAAAAcAAsAAAAAAAEAAAAcAAwAAAABAAAAAAAFAAgAAAAAAAEAAAAFAAkAAAAAAAEAAAAGAAgAAAAAAAEAAAAGAAkAAAAAAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAABAAEAAAAIAAgAAAAAAAEAAAAIAAkAAAAAAAEAAAAJAAgAAAAAAAEAAAAJAAkAAAAAAAEAAAAKAAgAAAABAAAAAAAKAAkAAAAAAAEAAAALAAgAAAAAAAEAAAALAAkAAAABAAEAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAASAAkAAAAAAAAAAAATAAkAAAAAAAAAAAAVAAkAAAAAAAAAAAAWAAkAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAaAAkAAAAAAAAAAAAbAAkAAAAAAAAAAAAcAAkAAAABAAAAAAD1//z/AAADAAsAAAD1//3/AAADAAsAAAD1//7/AAADAAsAAAD1////AAADAAsAAAD1/wAAAAADAAsAAAD1/wEAAAADAAsAAAD1/wIAAAADAAsAAAD1/wMAAAADAAsAAAD1/wQAAAADAAsAAAD1/wUAAAADAAsAAAD1/wYAAAADAAsAAAD1/wcAAAADAAsAAAD1/wgAAAADAAsAAAD1/wkAAAADAAsAAAD1/woAAAADAAsAAAD1/wsAAAADAAsAAAD1/wwAAAADAAsAAAAdAPz/AAADAAsAAAAdAP3/AAADAAsAAAAdAP7/AAADAAsAAAAdAP//AAADAAsAAAAdAAAAAAADAAsAAAAdAAEAAAADAAsAAAAdAAIAAAADAAsAAAAdAAMAAAADAAsAAAAdAAQAAAADAAsAAAAdAAUAAAADAAsAAAAdAAYAAAADAAsAAAAdAAcAAAADAAsAAAAdAAgAAAADAAsAAAAdAAkAAAADAAsAAAAdAAoAAAADAAsAAAAdAAsAAAADAAsAAAAdAAwAAAADAAsAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAD2/wkAAAABAAEAAAD2/wgAAAAAAAEAAAD2/wcAAAAAAAEAAAD2/wYAAAAAAAEAAAD2/wUAAAABAAEAAAD2/wQAAAAAAAEAAAD2/wMAAAAAAAAAAAAcAAgAAAAAAAEAAAAcAAcAAAAAAAEAAAAcAAYAAAAAAAEAAAAcAAUAAAABAAAAAAAcAAQAAAAAAAAAAAAUAAcAAAAMAAAAAAAUAAgAAAAMAAEAAAA=")
tile_set = ExtResource("6_lymix")

[node name="Foreground" type="TileMapLayer" parent="Tileset"]
z_index = 2
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD1//z/AAADAAsAAAD1//3/AAADAAsAAAD1//7/AAADAAsAAAD1////AAADAAsAAAD1/wAAAAADAAsAAAD1/wEAAAADAAsAAAD1/wIAAAADAAsAAAD1/wMAAAADAAsAAAD1/wQAAAADAAsAAAD1/wUAAAADAAsAAAD1/wYAAAADAAsAAAD1/wcAAAADAAsAAAD1/wgAAAADAAsAAAD1/wkAAAADAAsAAAD1/woAAAADAAsAAAD1/wsAAAADAAsAAAD1/wwAAAADAAsAAAAdAPz/AAADAAsAAAAdAP3/AAADAAsAAAAdAP7/AAADAAsAAAAdAP//AAADAAsAAAAdAAAAAAADAAsAAAAdAAEAAAADAAsAAAAdAAIAAAADAAsAAAAdAAMAAAADAAsAAAAdAAQAAAADAAsAAAAdAAUAAAADAAsAAAAdAAYAAAADAAsAAAAdAAcAAAADAAsAAAAdAAgAAAADAAsAAAAdAAkAAAADAAsAAAAdAAoAAAADAAsAAAAdAAsAAAADAAsAAAAdAAwAAAADAAsAAAAUAAkAAAAMAAIAAAA=")
tile_set = ExtResource("6_lymix")

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(-418, 627)
physics_material_override = ExtResource("2_3mivm")
script = ExtResource("6_b7jio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_187gu")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
z_index = 1
scale = Vector2(0.075, 0.075)
texture = ExtResource("1_4quuv")

[node name="Timer" type="Timer" parent="Ball"]
wait_time = 0.5
script = ExtResource("9_66tft")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(608, 286)

[connection signal="pressed" from="UI/PauseButton" to="UI/PauseMenu" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/VBoxContainer/Resume" to="UI/PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/VBoxContainer/Settings" to="UI/PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/VBoxContainer/MainMenu" to="UI/PauseMenu" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/PauseMenu/SettingsPanel/CloseSettings" to="UI/PauseMenu" method="_on_close_settings_pressed"]
[connection signal="body_exited" from="Bounds/Right" to="Ball" method="_on_right_body_exited"]
[connection signal="strokesChange" from="Ball" to="UI/HoleInfo" method="_on_ball_strokes_change"]
[connection signal="time" from="Ball" to="Ball/Timer" method="_on_ball_time"]
[connection signal="timeout" from="Ball/Timer" to="Ball" method="_on_timer_timeout"]

[editable path="UI/PauseMenu/SettingsPanel"]
